...
    <!-- Literals from kid main. -->
    <string name="title_activity_kid_main">ScrollingActivity</string>

    <!-- Literals from complete chore. -->
    <string name="button_submit">Complete</string>
    <string name="submit_pop_up_failed">Submit failed</string>
    <string name="submit_pop_up_success">Submit successful</string>

    <!-- Literals from verify chore. -->
    <string name="button_verify">Verify</string>
    <string name="verify_pop_up_failed">Verify failed</string>
    <string name="verify_pop_up_success">Verify successful</string>

    <!-- Literals from parent all rewards. -->
    <string name="menu_parent_all_rewards">Reward List</string>
    <string name="delete_pop_up_failed">Delete failed</string>
    <string name="delete_pop_up_success">Delete successful</string>

    <!-- Literals from miscellaneous. -->
    <string name="grid_layout_manager">Grid Layout Manager</string>
    <string name="linear_layout_manager">Linear Layout Manager</string>
    <string name="element_text">Element</string>
    <string name="delete">Delete</string>
    <string name="version">version v1.0.0</string>

</resources>
