...
            android:padding="8dp" />
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/verifyChoreBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:text="@string/button_verify"
                android:textAlignment="center"
                android:textSize="14sp" />

            <ImageView
                android:id="@+id/delete_icon"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="84dp"
                android:layout_marginEnd="9dp"
                android:src="@drawable/ic_delete" />
...
